added a location to the map

--- a/Mobile Mapper/Base.lproj/Main.storyboard
+++ b/Mobile Mapper/Base.lproj/Main.storyboard
@@ -28,6 +28,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="x4q-rU-oXZ" id="RlN-XF-D7H"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
